# santander-cycles-pipeline

./: .bruin.yml.init  .env.example  .env.init  .env_example  .gitignore  CLAUDE.md  Makefile  README.md  Untitled  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
_sample_schemas/: Schema Samples.csv  Schema Samples.xlsx
airflow/dags/: santander_cycles_dag.py
bruin/: pipeline.yml
bruin/assets/: ing_journeys.py  journeys_raw.py  journeys_stg.py  mrt_bike_stats.py  mrt_dim_stations.py  mrt_fct_journeys.py  mrt_kpis_monthly.py  mrt_station_stats.py  raw_bikepoints.py  raw_journeys.py  stg_bikepoints.py  stg_journeys.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: normalize_station_id.sql
dbt/tests/: assert_duration_positive.sql  assert_no_future_rides.sql  assert_station_borough_not_null.sql
docker/: docker-compose.yml
kestra/: pyproject.toml
kestra/flows/: main_prod_guide.yml  main_prod_ingest.yml  main_prod_serve.yml  main_prod_source_.yml  main_prod_transform.yml
kestra/python/: discover.py  download.py  make-parquet.py  source.py  unzip.py  upload-parquet.py
marimo-nb/: explore.py  pyproject.toml
prefect/: pipeline.py  requirements.txt  schedule.py
scripts/: ingest.py  looker_studio_setup.md  normalise.py  setup-vm.sh  startup-vm.sh  test_pipeline.py  trigger-guide-flow.sh
streamlit/: app.py  dashboard.py  pyproject.toml
terraform/: .terraform.tfstate.lock.info  main.tf  outputs.tf  terraform.tfstate.1774862124.backup  terraform.tfvars.example  variables.tf
(+16 files in other folders)
