[project]
name = "marimo-nb"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0",
    "google-cloud-bigquery>=3.41.0",
    "marimo>=0.23.3",
    "polars>=1.39.3",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-bigquery>=1.16.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
